# AizaScope

./: .gitignore  ENDPOINT_MAP.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  run_checks.py
.github/workflows/: ci.yml
aizascope/: chain_builder.py  classifier.py  cli.py  cvss.py  diagnostics.py  discovery.py  http_client.py  input_loader.py  models.py  probes.py  reporter.py  state.py  term_ui.py  version.py
aizascope/data/: endpoint_registry.json
tests/: test_core.py
